[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = ""
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
